tests/baselines/reference/unusedClassesinNamespace4.errors.txt
tests/cases/compiler/unusedClassesinNamespace4.ts(11,11): error TS6132: Variable 'c3' has never been used.


==== tests/cases/compiler/unusedClassesinNamespace4.ts (1 errors) ====
    
    namespace Validation {
        class c1 {
    
        }
    
        export class c2 {
    
        }
    
        class c3 extends c1 {
              ~~
!!! error TS6132: Variable 'c3' has never been used.
    
        }
    }